2006-07-31  Sushma Rai  <rsushma@novell.com>

	* camel/camel-stub-marshal.c (do_read): Come out of the loop on
	failure. Fixes the hang.
	(marshal_read): Resetting the byte array size when read fails.
	Patch submitted by "Jeffrey Stedfast <fejj@novell.com>" and 
	"Arunprakash <twizst@gmail.com>". Fixes #344196 and Novell
	bugzilla bug https://bugzilla.novell.com/show_bug.cgi?id=179545.

2006-07-31  Sushma Rai  <rsushma@novell.com>

	* configure.in: Removed newline from ALL_LINGUAS.

2006-07-31  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #170058
	* calendar/e-cal-backend-exchange-calendar.c: 
	(discard_alarm): Check if the icalcomponent is set
	in ECalComponent before removing the alarms.

2006-07-22  Sushma Rai  <rsushma@novell.com>

	* addressbook/e-book-backend-exchange.c: Corrected the birthday and
	anniversary date read. Fixes #332304
	patch Submitted by "Vandana Shenoy .B <shvandana@novell.com>"

2006-07-12  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #344651
	* calendar/e-cal-backend-exchange.c: (build_msg):
	avoid crash when importing events with 
	attachements which are MIME references instead of file names by ignoring
	these attachments (e.g. ATTACH:CID:0fd601c67efb$ef66760d$_CDOEX)

	Committed on behalf of Patrick Ohly <patrick.ohly@intel.com>

2006-07-08  Raivis Dejus  <orvils@gmail.com>

        * configure.in: Added "lv" (Latvian) to ALL_LINGUAS.
        * po/lv.po: Added Latvian Translation.

2006-06-15  Jeffrey Stedfast  <fejj@novell.com>

	* camel/camel-stub-marshal.c (do_read): Changed 'n' to be of type
	ssize_t rather than size_t so that we can properly catch '-1'
	return values. Still for bug #179566.

2006-06-02  Jeffrey Stedfast  <fejj@novell.com>

	* camel/camel-stub-marshal.c (do_read): Patch to my last
	patch. Oops, camel_read() doesn't guarantee that it will read 'n'
	requested bytes (as camel_write() guarantees that it will write
	'n' bytes), it is just a cancellable read() implementation. This
	should fix bug #179566.