@@ -1,3 +1,8 @@
+2006-08-07  Veerapuram Varadhan  <vvaradhan@novell.com>
+
+	* camel/camel-stub-marshal.c (do_read): Whenever timeout happens,
+	just keep reading.  Fixes #344196
+	
 2006-07-31  Sushma Rai  <rsushma@novell.com>
 
 	* camel/camel-stub-marshal.c (do_read): Come out of the loop on
